examples/nextjs-commerce/packages/spree/dist/errors/TokensNotRejectedError.js
class TokensNotRejectedError extends Error {
}
export { TokensNotRejectedError as default };
